Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-2014] fixed pie chart in screen renders last hour of data only (Vedmak)
 - [ZBX-2025] fixed deletion of actions (Vedmak)
 - [ZBX-3] fixed logging into syslog, Zabbix log levels are properly linked to syslog levels (Dmitry)
 - [ZBX-2022] fixed link color picker in maps in IE7 (Vednak)
 - [ZBX-1968] fixed error in log item history in ie8 (Vedmak)
 - [ZBX-2020] added requirements check for PHP input_max_time (Vedmak)
 - [ZBX-1958] fixed problem with a lot of digits in float values (Vedmak)
 - [ZBX-1853] fixed template\host full clone with triggers with dependencies (Vedmak)
 - [ZBX-1999] fixed bug when cannot create simple check item with macro in parameters (Vedmak)
 - [ZBX-1269] fixed offscreen popups (Vedmak)
 - [ZBX-1679] fixed error sometimes happen when use print button (Vedmak)
 - [ZBX-1980] added requirements check for php upload_max_filesize (Vedmak)
 - [ZBX-2002] refresh timer is now restarted instead of stopped when checkbox is checked(Vedmak)
 - [ZBX-1961] added support of '%' prompt for telnet.run[] check (Sasha)
 - [ZBX-1939] fixed errors when unicode chars are used in item keys (Vedmak)
 - [ZBX-1996] fixed JS error in IE7 in maps (Aly)
 - [ZBX-1328] improved host group mass deletion caption (Richlv)
 - [DEV-450] added support of LogSlowQueries option (Sasha)
 - [ZBX-1974] removed "Dropdown first entry" "1.6.2 comp mode" option (Vedmak)
 - [ZBX-1826] fixed error when change node in monitoring web (Vedmak)
 - [ZBX-1943] fixed refresh time selection in dashboard widgets (Vedmak)
 - [ZBX-1929] include eventlog.c and eventlog.h files in distribution package (Richlv)
 - [ZBX-1897] include CREDITS file in distribution package (Richlv)
 - [ZBXNEXT-229] further updates for Brazilian Portuguese translation; thanks to murilex (Richlv)
 - [ZBX-1945] speed improvement for synchronization between nodes (Sasha)