@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1995] fixed errors when save/update web scenario with existing name (Vedmak)
  - [ZBX-2014] fixed pie chart in screen renders last hour of data only (Vedmak)
  - [ZBX-2025] fixed deletion of actions (Vedmak)
  - [ZBX-3] fixed logging into syslog, Zabbix log levels are properly linked to syslog levels (Dmitry)
